--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+
+# Ignore these files:
+schema.rb
+database.yml
+
+
 # Ignore bundler config.
 /.bundle
 
@@ -43,3 +49,6 @@
 credentials.yml.enc
 /config/credentials.yml.enc
 
+# Ignore database configuration and schema files
+/config/database.yml
+/db/schema.rb
